[package]
name = "myapp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
#aya-ebpf = { version = "0.1.0", path = "../../aya/ebpf/aya-ebpf" }
#aya-log-ebpf = { version = "0.1.0", path = "../../aya/ebpf/aya-log-ebpf" }
myapp-common = { path = "../myapp-common" }
network-types = "0.0.6"

[[bin]]
name = "ockam_entrypoint"
path = "src/entrypoint.rs"

#[[bin]]
#name = "myapp_ingress"
#path = "src/ockam_ingress.rs"
#
#[[bin]]
#name = "myapp_egress"
#path = "src/ockam_egress.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
