[package]
name = "myapp"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.12", path = "../../aya/aya" }
aya-log = { version = "0.2", path = "../../aya/aya-log" }
clap = { version = "4.1", features = ["derive"] }
myapp-common = { path = "../myapp-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "myapp"
path = "src/main.rs"
